@@ -33,6 +33,9 @@ Problems fixed in development branch :
   * Input parameters (for restarting DFPT+U calculations) read_dns_bare 
     and d2ns_type were missing in the PH input namelist, and moreover
     they were not broadcasted.
+  * Option rescale-T and reduce-T now update the target temperature based on
+    the previous target temperature, not based on instantaneous temperature
+    as before.
 
 Incompatible changes in development branch :
   * ibrav=-13 crystal axis converted to a more standard orientation.
